@@ -11702,6 +11702,211 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|3000
+argument_list|)
+DECL|method|testMaxAssignWithZeroMemoryContainers ()
+specifier|public
+name|void
+name|testMaxAssignWithZeroMemoryContainers
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|FairSchedulerConfiguration
+operator|.
+name|ASSIGN_MULTIPLE
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_SCHEDULER_MINIMUM_ALLOCATION_MB
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|reinitialize
+argument_list|(
+name|conf
+argument_list|,
+name|resourceManager
+operator|.
+name|getRMContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|RMNode
+name|node
+init|=
+name|MockNodes
+operator|.
+name|newNodeInfo
+argument_list|(
+literal|1
+argument_list|,
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+literal|16384
+argument_list|,
+literal|16
+argument_list|)
+argument_list|,
+literal|0
+argument_list|,
+literal|"127.0.0.1"
+argument_list|)
+decl_stmt|;
+name|NodeAddedSchedulerEvent
+name|nodeEvent
+init|=
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|node
+argument_list|)
+decl_stmt|;
+name|NodeUpdateSchedulerEvent
+name|updateEvent
+init|=
+operator|new
+name|NodeUpdateSchedulerEvent
+argument_list|(
+name|node
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|nodeEvent
+argument_list|)
+expr_stmt|;
+name|ApplicationAttemptId
+name|attId
+init|=
+name|createSchedulingRequest
+argument_list|(
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|"root.default"
+argument_list|,
+literal|"user"
+argument_list|,
+literal|8
+argument_list|)
+decl_stmt|;
+name|FSSchedulerApp
+name|app
+init|=
+name|scheduler
+operator|.
+name|getSchedulerApp
+argument_list|(
+name|attId
+argument_list|)
+decl_stmt|;
+comment|// set maxAssign to 2: only 2 containers should be allocated
+name|scheduler
+operator|.
+name|maxAssign
+operator|=
+literal|2
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|updateEvent
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Incorrect number of containers allocated"
+argument_list|,
+literal|2
+argument_list|,
+name|app
+operator|.
+name|getLiveContainers
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// set maxAssign to -1: all remaining containers should be allocated
+name|scheduler
+operator|.
+name|maxAssign
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|updateEvent
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Incorrect number of containers allocated"
+argument_list|,
+literal|8
+argument_list|,
+name|app
+operator|.
+name|getLiveContainers
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Test to verify the behavior of    * {@link FSQueue#assignContainer(FSSchedulerNode)})    *     * Create two queues under root (fifoQueue and fairParent), and two queues    * under fairParent (fairChild1 and fairChild2). Submit two apps to the    * fifoQueue and one each to the fairChild* queues, all apps requiring 4    * containers each of the total 16 container capacity    *     * Assert the number of containers for each app after 4, 8, 12 and 16 updates.    *     * @throws Exception    */
 annotation|@
 name|Test
